# az_storage_queue_monitor

./: README.md  pyproject.toml
.github/workflows/: deploy-functions.yaml  deploy-pr.yaml
slack_stalker/: README.md  handler.py  local_run.py  queue_writer.py
tests/slack_stalker/: test_queue_writer.py
